--- a/dashboard.html
+++ b/dashboard.html
@@ -5,28 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Dashboard - Ukno Club</title>
     <link rel="stylesheet" href="dashboard.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script>
+        // Basic User Authentication Check (Placeholder)
+        // Redirects to auth.html if not 'userAuthenticated' or 'adminAuthenticated'
+        // This is a very basic check; a real app needs server-side authentication
+        const userAuthenticated = localStorage.getItem('userAuthenticated');
+        const adminAuthenticated = localStorage.getItem('adminAuthenticated');
+
+        if (!userAuthenticated && !adminAuthenticated) {
+             window.location.href = "auth.html";
+        }
+    </script>
 </head>
 <body>
     <div class="dashboard-container">
-        <!-- Header -->
         <header class="dashboard-header">
             <div class="branding">
                 <img src="assets/logo.png" alt="Ukno Club" class="logo">
-                <h1>Welcome back, <span class="username">User</span>!</h1>
-            </div>
+                <h1>Welcome back, <span class="username" id="loggedInUsername">User</span>!</h1> </div>
             <nav class="user-nav">
-                <a href="profile.html" class="profile-link">Profile</a>
-                <a href="index.html" class="logout-btn">
+                <a href="profile.html" class="profile-link">Profile</a> <a href="index.html" class="logout-btn">
                     <i class="fas fa-sign-out-alt"></i> Logout
                 </a>
             </nav>
         </header>
 
-        <!-- Main Content -->
         <main class="dashboard-content">
-            <!-- Learning Progress -->
             <section class="progress-section">
                 <h2><i class="fas fa-chart-line"></i> My Learning Progress</h2>
                 <div class="progress-cards">
@@ -46,50 +54,71 @@
                         <span class="progress-percent">100% Complete</span>
                         <div class="next-topic">Course Completed!</div>
                     </div>
-                </div>
+                     </div>
             </section>
 
-            <!-- Continue Learning -->
             <section class="continue-section">
                 <h2><i class="fas fa-play-circle"></i> Continue Learning</h2>
-                <a href="course-video.html" class="video-card">
-                    <div class="video-thumbnail">
-                        <img src="assets/data-analysis-thumb.jpg" alt="Video Thumbnail">
-                        <div class="video-progress">
-                            <div class="progress-fill" style="width: 45%"></div>
-                        </div>
+                <a href="course-video.html" class="video-card"> <div class="video-thumbnail">
+                        <img src="assets/data-analysis-thumb.jpg" alt="Video Thumbnail"> <div class="video-progress">
+                            <div class="progress-fill" style="width: 45%"></div> </div>
                         <div class="play-btn"><i class="fas fa-play"></i></div>
                     </div>
                     <div class="video-info">
-                        <h3>Data Cleaning with Python</h3>
-                        <p class="video-desc">Learn how to clean messy datasets using Pandas</p>
-                        <div class="video-meta">
-                            <span><i class="far fa-clock"></i> 22 mins remaining</span>
-                            <span><i class="far fa-calendar"></i> Last viewed 2 days ago</span>
-                        </div>
+                        <h3>Data Cleaning with Python</h3> <p class="video-desc">Learn how to clean messy datasets using Pandas</p> <div class="video-meta">
+                            <span><i class="far fa-clock"></i> 22 mins remaining</span> <span><i class="far fa-calendar"></i> Last viewed 2 days ago</span> </div>
                     </div>
                 </a>
-            </section>
+                 </section>
 
-            <!-- Quick Actions -->
             <section class="actions-section">
                 <h2><i class="fas fa-bolt"></i> Quick Access</h2>
                 <div class="action-grid">
-                    <a href="courses.html" class="action-card">
-                        <i class="fas fa-book-open"></i>
+                    <a href="courses.html" class="action-card"> <i class="fas fa-book-open"></i>
                         <span>Browse Courses</span>
                     </a>
-                    <a href="notes.html" class="action-card">
-                        <i class="fas fa-book"></i>
+                    <a href="notes.html" class="action-card"> <i class="fas fa-book"></i>
                         <span>My Notes</span>
                     </a>
-                    <a href="feedback.html" class="action-card">
-                        <i class="fas fa-comment-alt"></i>
+                    <a href="feedback.html" class="action-card"> <i class="fas fa-comment-alt"></i>
                         <span>Feedback</span>
                     </a>
-                </div>
+                     </div>
             </section>
         </main>
     </div>
+
+    <script>
+        // Display logged-in username
+        const usernameSpan = document.getElementById('loggedInUsername');
+        const loggedInUsername = localStorage.getItem('loggedInUsername'); // Get username from localStorage
+        if (usernameSpan && loggedInUsername) {
+            usernameSpan.textContent = loggedInUsername;
+        } else if (usernameSpan && localStorage.getItem('adminAuthenticated')) {
+            // Fallback for admin if somehow they land here without a username
+            usernameSpan.textContent = 'Admin';
+        }
+
+
+        // Logout functionality
+        document.getElementById('logoutBtn').addEventListener('click', function(e) {
+            e.preventDefault(); // Prevent default link behavior
+            // Clear all relevant auth/user info from localStorage
+            localStorage.removeItem('userAuthenticated');
+            localStorage.removeItem('adminAuthenticated');
+            localStorage.removeItem('loggedInUsername');
+            // Add other user-specific localStorage items to clear here if necessary
+
+            window.location.href = "index.html"; // Redirect to landing page after logout
+        });
+
+        // Basic check to redirect admin if they end up on user dashboard
+        if (localStorage.getItem('adminAuthenticated') && !localStorage.getItem('userAuthenticated')) {
+             // Maybe redirect admins back to their dashboard if they land here?
+             // window.location.href = "admin-dashboard.html";
+             // Or maybe just show the user dashboard interface to them? Depends on design.
+             // For now, they just see the user dashboard content.
+        }
+    </script>
 </body>
 </html>
